testing/macro-tests/tests/ui/default_entity_missing_field.stderr
error: Default was requested for entity MissingEntityDefault, but required field `email` has no Rust construction value
  --> tests/ui/default_entity_missing_field.rs:38:12
   |
38 | pub struct MissingEntityDefault;
   |            ^^^^^^^^^^^^^^^^^^^^
